[ALLI-1873] Added location service ini-file to sample config. Fixed double scrollbar bug in modal.

--- a/web/interface/themes/ndl/css/default.css
+++ b/web/interface/themes/ndl/css/default.css
@@ -5100,5 +5100,8 @@ form#feedbackForm label {
 
 #locationServiceFrame {
     width: 100%;
-    height: 100%;
+    height: 95%;
+}
+#locationServiceDirectLink {
+    height: 5%;
 }
